--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,6 +14,12 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Setup PHP Action
+      uses: shivammathur/setup-php@2.10.0
+      with:
+        php-version: '7.4'
+        coverage: none
+
     - name: Validate composer.json and composer.lock
       run: composer validate --strict
 
