--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
         "mockery/mockery": "^1.3",
         "phpunit/phpunit": "^8.5",
         "symfony/dotenv": "^5.0",
-        "mikey179/vfsstream": "^1.6"
+        "mikey179/vfsstream": "^1.6",
+        "friendsofphp/php-cs-fixer": "^2.18"
     }
 }
