--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -7,9 +7,13 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  test:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.operating-system }}
+    strategy:
+      matrix:
+        operating-system: ['ubuntu-latest', 'windows-latest', 'macos-latest']
+        php-versions: ['7.3', '8.1']
 
     steps:
     - uses: actions/checkout@v2
@@ -17,8 +21,10 @@ jobs:
     - name: Setup PHP Action
       uses: shivammathur/setup-php@2.10.0
       with:
-        php-version: '7.3'
+        php-version: ${{ matrix.php-versions }}
         coverage: none
+        extensions: json
+
     - name: Setup problem matchers for PHP
       run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
 
