--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "ext-swoole" : "needed to use SwooleFullJsonAdapter"
     },
     "require": {
-        "php": "^7.3",
+        "php": "^7.3|^8.0",
         "ext-json": "*",
 
         "guzzlehttp/guzzle": "^5|^6|^7",
