Added psr/log version 3 and php 8.1

--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,11 @@
         "ext-swoole" : "needed to use SwooleFullJsonAdapter"
     },
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^7.3|^8.0|^8.1",
         "ext-json": "*",
 
         "guzzlehttp/guzzle": "^6|^7",
-        "psr/log": "^1.1"
+        "psr/log": "^1.1|^2|^3"
     },
     "scripts": {
         "test": "vendor/bin/phpunit"
