--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         operating-system: ['ubuntu-latest', 'windows-latest', 'macos-latest']
-        php-versions: ['7.3', '8.1']
+        php-versions: ['7.3', '8.1', '8.2']
 
     steps:
     - uses: actions/checkout@v2
