--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,13 +13,13 @@ jobs:
     strategy:
       matrix:
         operating-system: ['ubuntu-latest', 'windows-latest', 'macos-latest']
-        php-versions: ['7.3', '8.1', '8.2']
+        php-versions: ['8.0', '8.1', '8.2', '8.3', '8.4']
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Setup PHP Action
-      uses: shivammathur/setup-php@2.10.0
+      uses: shivammathur/setup-php@2.35.2
       with:
         php-version: ${{ matrix.php-versions }}
         coverage: none
@@ -36,7 +36,7 @@ jobs:
 
     - name: Cache Composer packages
       id: composer-cache
-      uses: actions/cache@v2
+      uses: actions/cache@v4
       with:
         path: vendor
         key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
