--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "ext-swoole" : "needed to use SwooleFullJsonAdapter"
     },
     "require": {
-        "php": "^8.0|^8.1|^8.2",
+        "php": "^8.0",
         "ext-json": "*",
 
         "guzzlehttp/guzzle": "^6|^7",
