--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -11,6 +11,7 @@ jobs:
 
     runs-on: ${{ matrix.operating-system }}
     strategy:
+      fail-fast: false
       matrix:
         operating-system: ['ubuntu-latest', 'macos-latest', 'windows-latest']
         php-versions: ['8.0', '8.1', '8.2', '8.3', '8.4']
