--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        operating-system: ['ubuntu-latest', 'macos-latest', 'windows-latest']
+        operating-system: ['ubuntu-latest', 'macos-latest']
         php-versions: ['8.0', '8.1', '8.2', '8.3', '8.4']
 
     steps:
